tests/snapshots/compile__wgsl_generate_phyllotaxis_unconnected.snap
---
source: tests/compile.rs
expression: wgsl
---

struct Uniforms {
    u_resolution: vec2f,
    u_time: f32,
    u_control_phyllotaxis1_angle: f32,
    u_control_phyllotaxis1_bg: vec4f,
    u_control_phyllotaxis1_count: f32,
    u_control_phyllotaxis1_dotSize: f32,
    u_control_phyllotaxis1_fg: vec4f,
    u_control_phyllotaxis1_radius: f32,
}
@group(0) @binding(0) var<uniform> u: Uniforms;

fn phyllotaxis1_output(uv: vec2f) -> vec4f {
    let count = max(u.u_control_phyllotaxis1_count, 1.0);
    let maxR = max(u.u_control_phyllotaxis1_radius, 1e-4);
    let seedAngle = (u.u_control_phyllotaxis1_angle) * 2.0 * PI;
    let dotSize = u.u_control_phyllotaxis1_dotSize;
    let last = max(count - 1.0, 1.0);
    let r = length(uv);
    let lo = max(r - dotSize, 0.0) / maxR;
    let hi = (r + dotSize) / maxR;
    let first = i32(floor(last * lo * lo));
    let stop = i32(min(ceil(last * hi * hi), count - 1.0));
    var minDist = 1e6;
    for (var i = 0; i < 500; i++) {
        let j = first + i;
        if (j > stop) { break; }
        let t = f32(j) / last;
        let sr = maxR * sqrt(t);
        let a = f32(j) * seedAngle;
        minDist = min(minDist, length(uv - sr * vec2f(cos(a), sin(a))));
    }
    return mix(u.u_control_phyllotaxis1_bg, u.u_control_phyllotaxis1_fg, 1.0 - smoothstep(dotSize * 0.5, dotSize, minDist));
}

@fragment
fn fs_main(@builtin(position) frag_coord: vec4f) -> @location(0) vec4f {
    let screenUV = frag_coord.xy / u.u_resolution;
    let aspectRatio = u.u_resolution.x / u.u_resolution.y;
    let uv = vec2f((2.0 * screenUV.x - 1.0) * aspectRatio, 2.0 * screenUV.y - 1.0);
    return phyllotaxis1_output(uv);
}
