tests/snapshots/compile__wgsl_generate_polygon_unconnected.snap
---
source: tests/compile.rs
expression: wgsl
---

struct Uniforms {
    u_resolution: vec2f,
    u_time: f32,
    u_control_mix4_amount: f32,
    u_control_polygon1_background: vec4f,
    u_control_polygon1_centerX: f32,
    u_control_polygon1_centerY: f32,
    u_control_polygon1_foreground: vec4f,
    u_control_polygon1_radius: f32,
    u_control_polygon1_rotation: f32,
    u_control_polygon1_sides: f32,
    u_control_polygon1_softness: f32,
    u_control_rgba3_a: f32,
    u_control_rgba3_b: f32,
    u_control_rgba3_g: f32,
    u_opt_mix4_curve: i32,
    u_opt_mix4_method: i32,
}
@group(0) @binding(0) var<uniform> u: Uniforms;

fn polygon1_color(uv: vec2f) -> vec4f {
    let sides = max(u.u_control_polygon1_sides, 3.0);
    let radius = u.u_control_polygon1_radius;
    let softness = u.u_control_polygon1_softness;
    let rotation = (u.u_control_polygon1_rotation) * 2.0 * PI;
    let cuv = uv - vec2f(u.u_control_polygon1_centerX, u.u_control_polygon1_centerY);
    let cs = cos(rotation);
    let sn = sin(rotation);
    let p = vec2f(cuv.x * cs - cuv.y * sn, cuv.x * sn + cuv.y * cs);
    let angle = atan2(p.y, p.x);
    let dist = length(p);
    let segmentAngle = PI * 2.0 / sides;
    let theta = floor(angle / segmentAngle + 0.5) * segmentAngle;
    let edge = radius * cos(PI / sides) / max(cos(angle - theta), 1e-6);
    let mask = 1.0 - smoothstep(edge - softness, edge + softness, dist);
    return mix(u.u_control_polygon1_background, u.u_control_polygon1_foreground, mask);
}

fn polygon1_mask(uv: vec2f) -> f32 {
    let sides = max(u.u_control_polygon1_sides, 3.0);
    let radius = u.u_control_polygon1_radius;
    let softness = u.u_control_polygon1_softness;
    let rotation = (u.u_control_polygon1_rotation) * 2.0 * PI;
    let cuv = uv - vec2f(u.u_control_polygon1_centerX, u.u_control_polygon1_centerY);
    let cs = cos(rotation);
    let sn = sin(rotation);
    let p = vec2f(cuv.x * cs - cuv.y * sn, cuv.x * sn + cuv.y * cs);
    let angle = atan2(p.y, p.x);
    let dist = length(p);
    let segmentAngle = PI * 2.0 / sides;
    let theta = floor(angle / segmentAngle + 0.5) * segmentAngle;
    let edge = radius * cos(PI / sides) / max(cos(angle - theta), 1e-6);
    let mask = 1.0 - smoothstep(edge - softness, edge + softness, dist);
    return mask;
}

fn rgba3_output(uv: vec2f) -> vec4f {
    return vec4f(polygon1_mask(uv), u.u_control_rgba3_g, u.u_control_rgba3_b, u.u_control_rgba3_a);
}

fn mix4_output(uv: vec2f) -> vec4f {
    let a = polygon1_color(uv);
    let b = rgba3_output(uv);
    let amt = clamp(u.u_control_mix4_amount, 0.0, 1.0);
    let f = select(
        amt,
        clamp(0.5 + 0.5 * tan(clamp(2.0 * amt - 1.0, -0.999, 0.999) * 1.5707963), 0.0, 1.0),
        u.u_opt_mix4_curve == 1);
    let lum = dot(a.rgb, vec3f(0.299, 0.587, 0.114));
    let m = u.u_opt_mix4_method;
    if (m == 1) {
        return select(a, b, lum < f);
    } else if (m == 2) {
        return select(a, b, lum > 1.0 - f);
    } else {
        return mix(a, b, f);
    }
}

@fragment
fn fs_main(@builtin(position) frag_coord: vec4f) -> @location(0) vec4f {
    let screenUV = frag_coord.xy / u.u_resolution;
    let aspectRatio = u.u_resolution.x / u.u_resolution.y;
    let uv = vec2f((2.0 * screenUV.x - 1.0) * aspectRatio, 2.0 * screenUV.y - 1.0);
    return mix4_output(uv);
}
