tests/snapshots/compile__wgsl_generate_radialgradient_unconnected.snap
---
source: tests/compile.rs
expression: wgsl
---

struct Uniforms {
    u_resolution: vec2f,
    u_time: f32,
    u_control_radialgradient1_centerColor: vec4f,
    u_control_radialgradient1_centerX: f32,
    u_control_radialgradient1_centerY: f32,
    u_control_radialgradient1_edgeColor: vec4f,
    u_control_radialgradient1_offset: f32,
    u_control_radialgradient1_radius: f32,
}
@group(0) @binding(0) var<uniform> u: Uniforms;

fn radialgradient1_output(uv: vec2f) -> vec4f {
    let dist = length(uv - vec2f(u.u_control_radialgradient1_centerX, u.u_control_radialgradient1_centerY));
    let radius = u.u_control_radialgradient1_radius;
    let raw = dist / select(radius, 1e-6, abs(radius) < 1e-6) + (u.u_control_radialgradient1_offset);
    let t = clamp(raw, 0.0, 1.0);
    return mix(u.u_control_radialgradient1_centerColor, u.u_control_radialgradient1_edgeColor, t);
}

@fragment
fn fs_main(@builtin(position) frag_coord: vec4f) -> @location(0) vec4f {
    let screenUV = frag_coord.xy / u.u_resolution;
    let aspectRatio = u.u_resolution.x / u.u_resolution.y;
    let uv = vec2f((2.0 * screenUV.x - 1.0) * aspectRatio, 2.0 * screenUV.y - 1.0);
    return radialgradient1_output(uv);
}
