tests/snapshots/compile__wgsl_generate_randomhurl_connected.snap
---
source: tests/compile.rs
expression: wgsl
---

struct Uniforms {
    u_resolution: vec2f,
    u_time: f32,
    u_control_mix5_amount: f32,
    u_control_rgba4_a: f32,
    u_control_rgba4_b: f32,
    u_control_rgba4_g: f32,
    u_control_vignette3_radius: f32,
    u_control_vignette3_softness: f32,
    u_opt_mix5_curve: i32,
    u_opt_mix5_method: i32,
}
@group(0) @binding(0) var<uniform> u: Uniforms;

fn hashBits(x0: u32) -> u32 {
    var x = x0;
    x += (x << 10u);
    x ^= (x >> 6u);
    x += (x << 3u);
    x ^= (x >> 11u);
    x += (x << 15u);
    return x;
}

fn hashBits2(v: vec2u) -> u32 { return hashBits(v.x ^ hashBits(v.y)); }

fn hashRandom(v: vec2f) -> f32 {
    var m = hashBits2(bitcast<vec2u>(v));
    m &= 0x007FFFFFu;
    m |= 0x3F800000u;
    return bitcast<f32>(m) - 1.0;
}

fn vignette3_mask(uv: vec2f) -> f32 {
    let radius = u.u_control_vignette3_radius;
    let softness = max(u.u_control_vignette3_softness, 1e-4);
    let mask = 1.0 - smoothstep(radius - softness, radius + softness, length(uv));
    return mask;
}

fn randomhurl1_color(uv: vec2f) -> vec4f {
    let seed = vignette3_mask(uv);
    let r = hashRandom(uv + vec2f(seed, 0.0));
    let g = hashRandom(uv + vec2f(0.0, seed + 1.0));
    let b = hashRandom(uv + vec2f(seed + 2.0, seed + 3.0));
    return vec4f(r, g, b, 1.0);
}

fn randomhurl1_value(uv: vec2f) -> f32 {
    let seed = vignette3_mask(uv);
    let r = hashRandom(uv + vec2f(seed, 0.0));
    let g = hashRandom(uv + vec2f(0.0, seed + 1.0));
    let b = hashRandom(uv + vec2f(seed + 2.0, seed + 3.0));
    return dot(vec3f(r, g, b), vec3f(0.299, 0.587, 0.114));
}

fn rgba4_output(uv: vec2f) -> vec4f {
    return premultiply(vec4f(randomhurl1_value(uv), u.u_control_rgba4_g, u.u_control_rgba4_b, u.u_control_rgba4_a));
}

fn mix5_output(uv: vec2f) -> vec4f {
    let a = randomhurl1_color(uv);
    let b = rgba4_output(uv);
    let amt = clamp(u.u_control_mix5_amount, 0.0, 1.0);
    let f = select(
        amt,
        clamp(0.5 + 0.5 * tan(clamp(2.0 * amt - 1.0, -0.999, 0.999) * 1.5707963), 0.0, 1.0),
        u.u_opt_mix5_curve == 1);
    let lum = dot(a.rgb, vec3f(0.299, 0.587, 0.114));
    let m = u.u_opt_mix5_method;
    if (m == 1) {
        return select(a, b, lum < f);
    } else if (m == 2) {
        return select(a, b, lum > 1.0 - f);
    } else {
        return mix(a, b, f);
    }
}

@fragment
fn fs_main(@builtin(position) frag_coord: vec4f) -> @location(0) vec4f {
    let screenUV = frag_coord.xy / u.u_resolution;
    let aspectRatio = u.u_resolution.x / u.u_resolution.y;
    let uv = vec2f((2.0 * screenUV.x - 1.0) * aspectRatio, 2.0 * screenUV.y - 1.0);
    return mix5_output(uv);
}
