tests/snapshots/compile__wgsl_generate_sierpinski_unconnected.snap
---
source: tests/compile.rs
expression: wgsl
---

struct Uniforms {
    u_resolution: vec2f,
    u_time: f32,
    u_control_sierpinski1_colorIn: vec4f,
    u_control_sierpinski1_colorOut: vec4f,
    u_control_sierpinski1_detail: f32,
    u_control_sierpinski1_zoom: f32,
}
@group(0) @binding(0) var<uniform> u: Uniforms;

fn sierpinski1_output(uv: vec2f) -> vec4f {
    const SQRT3 = 1.7320508;
    var p = uv * (u.u_control_sierpinski1_zoom);
    p.y *= 2.0 / SQRT3;
    p.x -= p.y * 0.5;
    let size = pow(2.0, clamp(u.u_control_sierpinski1_detail, 1.0, 10.0));
    let cell = vec2i(floor_mod2(p, vec2f(size)));
    let inSet = select(0.0, 1.0, (cell.x & cell.y) == 0);
    return mix(u.u_control_sierpinski1_colorOut, u.u_control_sierpinski1_colorIn, inSet);
}

@fragment
fn fs_main(@builtin(position) frag_coord: vec4f) -> @location(0) vec4f {
    let screenUV = frag_coord.xy / u.u_resolution;
    let aspectRatio = u.u_resolution.x / u.u_resolution.y;
    let uv = vec2f((2.0 * screenUV.x - 1.0) * aspectRatio, 2.0 * screenUV.y - 1.0);
    return sierpinski1_output(uv);
}
